# Auth_system

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 7c3376c4b738_initial_migration.py
app/: config.py  database.py  dependencies.py  exceptions.py  main.py
app/api/v1/: auth.py  health.py  router.py  users.py
app/core/: cache.py  rate_limit.py  security.py
app/models/: __init__.py  base.py  role.py  session.py  user.py
app/models/schemas/api/: __init__.py  base.py  role.py  session.py  user.py
app/schemas/: auth.py  common.py  user.py
app/services/: auth.py  password_reset.py  token.py  user.py
tests/: conftest.py  test_auth.py
